se deja tablero coloreado y listo para poner la musica